--- a/Day6/page1.html
+++ b/Day6/page1.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 1 </title>
 </head>
+
 <body>
-    <div class="page" id = "switch">
-        <p>
-            <h>
-                Page1 
-            </h>
-        </p>
-    </div>
+        <div class="page" id = "switch">
+                <h>
+                    Page1 
+                </h>
+        </div>
     <script>
-        document.getElementById("switch").innerHTML = `<a href = "page2.html" > Page 2 </a>`;
+        document.getElementById("switch").innerHTML= `<a href = "page2.html" > Page 2 </a>`;
     </script>
 </body>
 </html>
